# starlette-web

./: .coveragerc  .env.template  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  command.py  setup.cfg
.github/workflows/: test.yaml
docs/notes/: anyio_structured_concurrency.md  database_session_scopes.md  session_scopes.md
docs/receipts/: caching.md  channels.md  constance.md  scheduler.md  sentry_logging.md  websockets.md
etc/: run_tests.sh
starlette_web/: asgi.py
starlette_web/auth/: backend.py  models.py  permissions.py  routes.py  schemas.py  utils.py  views.py
starlette_web/common/: __init__.py  app.py  db_utils.py  exceptions.py  models.py  redis.py  typing.py  utils.py  views.py
starlette_web/common/apispec/: introspection.py  schemas.py
starlette_web/common/apispec/marshmallow/: converters.py
starlette_web/common/authorization/: backends.py  base_user.py  permissions.py
starlette_web/common/caches/: __init__.py  base.py  cache_handler.py  local_memory.py
starlette_web/common/channels/: __init__.py  base.py  event.py  exceptions.py  layers_handler.py
starlette_web/common/channels/layers/: base.py  local_memory.py
starlette_web/common/conf/: __init__.py  app_manager.py  base_app_config.py  global_settings.py
starlette_web/common/database/: __init__.py  columns.py  model_base.py  model_mixin.py  session_maker.py  transaction.py  types.py  utils.py
starlette_web/common/email/: __init__.py  base_sender.py  email_manager.py
starlette_web/common/files/: cache.py  filelock.py
starlette_web/common/http/: base_endpoint.py  exception_handlers.py  exceptions.py  renderers.py  requests.py  responses.py  schemas.py  statuses.py
starlette_web/common/i18n/: __init__.py
starlette_web/common/management/: base.py
starlette_web/common/management/commands/: collectstatic.py
starlette_web/common/utils/: __init__.py  async_utils.py  choices.py  crypto.py  email.py  importing.py  json.py  logging.py  regex.py  serializers.py  strings.py  urls.py
starlette_web/common/ws/: base_endpoint.py  requests.py  schemas.py
starlette_web/contrib/admin/: __init__.py  admin.py  apps.py  auth_provider.py  helpers.py  middleware.py  view.py
starlette_web/contrib/apispec/: apps.py  introspection.py  routes.py  views.py
starlette_web/contrib/apispec/marshmallow/: __init__.py  converters.py
starlette_web/contrib/auth/: admin.py  apps.py  backend.py  hasher.py  hashers.py  models.py  password_validation.py  permissions.py  routes.py  utils.py  views.py
starlette_web/contrib/camel_case/: __init__.py  parser.py  renderer.py  utils.py
starlette_web/contrib/constance/: __init__.py
starlette_web/contrib/postgres/: channel_layers.py
starlette_web/contrib/redis/: __init__.py  cache.py  channel_layers.py  client.py  redislock.py
starlette_web/contrib/scheduler/: __init__.py  app_settings.py  apps.py
starlette_web/contrib/sendgrid/: __init__.py  email.py
starlette_web/contrib/staticfiles/: apps.py
starlette_web/core/: app.py  database.py  routes.py  settings.py
starlette_web/tests/: app.py  apps.py  conftest.py  helpers.py  mocks.py  views.py
starlette_web/tests/api/: test_auth.py  test_base.py  test_service.py
starlette_web/tests/contrib/: test_apispec.py  test_camel_case.py  test_channels.py  test_constance.py  test_password_validators.py  test_redis_cache.py  test_websocket_chat.py
starlette_web/tests/core/: test_auth_backends.py  test_base_caches.py  test_settings.py  test_websocket_endpoint.py
starlette_web/tests/database/: test_model_mixin.py  test_nested_transaction.py
starlette_web/tests/utils/: test_auth_hasher.py  test_json.py  test_redis_pattern_matcher.py  test_serializers.py
starlette_web/tests/views/: __init__.py  http.py  websocket.py
(+21 files in other folders)
