[metadata]
name = starlette-web
version = 0.0.1
description = Simple components for starlette-based web-app
long_description = file: README.md
url = https://github.com/DmitryBurnaev/starlette-web
author = Dmitry Burnaev
author_email = dmitry.burnaev@gmail.com
license = MIT License
classifiers =
    Framework :: Starlette
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
packages = find:
include_package_data = True

install_requires =
    starlette>=0.17,<0.18
    webargs-starlette>=2.0,<2.1
    python-multipart==0.0.5

    asyncpg>=0.25,<0.26
    sqlalchemy>=1.4,<1.5

    PyJWT>=2.3,<2.4
    httpx>=0.21,<0.22
    redis>=4.0,<4.1
    sentry-sdk>=1.5,<1.6
    python-dotenv==0.19.2

[options.packages.find]
exclude =
    tests

[options.extras_require]
develop =
    black>=22.3,<22.4

testing =
    pytest>=6.2,<6.3
    coverage>=6.2,<6.3
    alembic>=1.7,<1.8
    psycopg2-binary>=2.9,<2.10
    requests>=2.26,<2.27
    flake8>=4.0,<4.1
    aioredis>=2.0.1,<2.1
