[metadata]
name = starlette-web
version = 0.0.2
description = Simple components for starlette-based web-app
long_description = file: README.md
url = https://github.com/DmitryBurnaev/starlette-web
author = Dmitry Burnaev
author_email = dmitry.burnaev@gmail.com
license = MIT License
classifiers =
    Framework :: Starlette
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
packages = find:
include_package_data = True

install_requires =
    starlette>=0.21,<0.23
    webargs-starlette>=2.1,<2.2
    python-multipart==0.0.5 # required by starlette dependencies

    asyncpg>=0.27,<0.28
    sqlalchemy>=1.4,<1.5

    Jinja2>=3.1,<3.2
    PyJWT>=2.6,<2.7
    httpx>=0.23,<0.24
    redis>=4.3,<4.4
    sentry-sdk>=1.10,<1.11
    python-dotenv>=0.21,<0.22

[options.packages.find]
exclude =
    tests

[options.extras_require]

apispec =
    apispec>=6.0,<6.1
    pyyaml>=6.0,<6.1

develop =
    black~=22.10.0

testing =
    pytest>=6.2,<6.3
    coverage>=6.2,<6.3
    alembic>=1.7,<1.8
    psycopg2-binary>=2.9,<2.10
    requests>=2.26,<2.27
    flake8>=4.0,<4.1
    aioredis>=2.0.1,<2.1
